fix gap

--- a/apps/cms/src/app/home/hero/hero.component.scss
+++ b/apps/cms/src/app/home/hero/hero.component.scss
@@ -1,4 +1,8 @@
 article {
   display: flex;
-  gap: 16px;
+}
+
+// Gap
+article > *:not(:first-child) {
+  margin-left: 16px;
 }
