--- a/apps/cms/src/app/home/org-titles/org-titles.component.scss
+++ b/apps/cms/src/app/home/org-titles/org-titles.component.scss
@@ -1,6 +1,10 @@
 article {
   display: flex;
-  gap: 16px;
+}
+
+// Gap
+article > *:not(:first-child) {
+  margin-left: 16px;
 }
 
 form-autocomplete, form-chips-autocomplete {
